--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   intl: ^0.19.0
   firebase_storage: ^11.7.1
   image_picker: ^1.0.8
+  collection: ^1.18.0
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +38,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/lottie/
     - assets/svgs/
 
   # fonts:
