--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,5 @@
 plugins {
     id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -52,6 +49,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        compileSdkVersion 34
         multiDexEnabled true
     }
 
@@ -68,6 +66,4 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation 'com.android.support:multidex:2.0.1'
-}
+dependencies {}
