--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 
   cupertino_icons: ^1.0.6
@@ -19,15 +21,22 @@ dependencies:
   firebase_core: ^2.29.0
   firebase_auth: ^4.19.1
   cloud_firestore: ^4.16.1
+  firebase_messaging: ^14.9.2
   intl: ^0.19.0
   firebase_storage: ^11.7.1
   image_picker: ^1.0.8
   collection: ^1.18.0
   lottie: ^3.1.0
+  uuid: ^4.4.0
+  connectivity_plus: ^6.0.3
+  geolocator: ^11.0.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 
   flutter_lints: ^3.0.0
 
